framec/tests/snapshots/python_snapshots__state_args.snap
---
source: framec/tests/python_snapshots.rs
expression: "compile_fixture(\"04_state_args\", \"python_3\")"
---
from typing import Any, Optional, List, Dict, Callable

class StateArgsFrameEvent:
    def __init__(self, message: str, parameters):
        self._message = message
        self._parameters = parameters


class StateArgsFrameContext:
    def __init__(self, event: StateArgsFrameEvent, default_return):
        self.event = event
        self._return = default_return
        self._data = {}
        self._transitioned = False


class StateArgsCompartment:
    def __init__(self, state: str, parent_compartment = None):
        self.state = state
        self.state_args = []
        self.state_vars = {}
        self.enter_args = []
        self.exit_args = []
        self.forward_event = None
        self.parent_compartment = parent_compartment

    def copy(self) -> 'StateArgsCompartment':
        c = StateArgsCompartment(self.state, self.parent_compartment)
        c.state_args = self.state_args.copy()
        c.state_vars = self.state_vars.copy()
        c.enter_args = self.enter_args.copy()
        c.exit_args = self.exit_args.copy()
        c.forward_event = self.forward_event
        return c


class StateArgs:
    def __init__(self):
        self._state_stack = []
        self._context_stack = []
        self.__compartment = self.__prepareEnter("Idle", [], [])
        self.__next_compartment = None

    @classmethod
    def _create(cls):
        c = cls()
        __e = StateArgsFrameEvent("$>", c.__compartment.enter_args)
        __ctx = StateArgsFrameContext(__e, None)
        c._context_stack.append(__ctx)
        c.__kernel(__e)
        c._context_stack.pop()
        return c

    _HSM_CHAIN = {
        "Idle": ["Idle"],
        "Holding": ["Holding"],
    }
    def __prepareEnter(self, leaf, state_args, enter_args):
        comp = None
        for name in self._HSM_CHAIN[leaf]:
            new_comp = StateArgsCompartment(name)
            new_comp.state_args = list(state_args)
            new_comp.enter_args = list(enter_args)
            new_comp.parent_compartment = comp
            comp = new_comp
        return comp

    def __prepareExit(self, exit_args):
        comp = self.__compartment
        while comp is not None:
            comp.exit_args = list(exit_args)
            comp = comp.parent_compartment

    def __kernel(self, __e):
        # Route event to current state
        self.__router(__e)
        # Drain any transitions queued by the handler
        while self.__next_compartment is not None:
            next_compartment = self.__next_compartment
            self.__next_compartment = None
            # Exit the current (leaf) state
            self.__router(StateArgsFrameEvent("<$", self.__compartment.exit_args))
            # Switch to the new compartment
            self.__compartment = next_compartment
            if next_compartment.forward_event is None:
                # No forwarded event — synthesize a fresh $>
                self.__router(StateArgsFrameEvent("$>", self.__compartment.enter_args))
            else:
                if next_compartment.forward_event._message == "$>":
                    # Forwarded event IS $> — dispatch directly so the
                    # destination's $> receives the caller's payload
                    self.__router(next_compartment.forward_event)
                else:
                    # Forwarded event is not $> — initialize the destination
                    # with a fresh $>, then dispatch the forward to it
                    self.__router(StateArgsFrameEvent("$>", self.__compartment.enter_args))
                    self.__router(next_compartment.forward_event)
            next_compartment.forward_event = None
            # Mark all stacked contexts as transitioned
            for ctx in self._context_stack:
                ctx._transitioned = True

    def __router(self, __e):
        if self.__compartment.state == "Idle":
            self._state_Idle(__e, self.__compartment)
        elif self.__compartment.state == "Holding":
            self._state_Holding(__e, self.__compartment)

    def __transition(self, next_compartment):
        self.__next_compartment = next_compartment

    def load(self, initial: int):
        __e = StateArgsFrameEvent("load", [initial])
        __ctx = StateArgsFrameContext(__e, None)
        self._context_stack.append(__ctx)
        try:
            self.__kernel(__e)
        finally:
            __frame_ctx = self._context_stack.pop()
        return __frame_ctx._return

    def adjust(self, delta: int):
        __e = StateArgsFrameEvent("adjust", [delta])
        __ctx = StateArgsFrameContext(__e, None)
        self._context_stack.append(__ctx)
        try:
            self.__kernel(__e)
        finally:
            __frame_ctx = self._context_stack.pop()
        return __frame_ctx._return

    def peek(self) -> int:
        __e = StateArgsFrameEvent("peek", [])
        __ctx = StateArgsFrameContext(__e, None)
        self._context_stack.append(__ctx)
        try:
            self.__kernel(__e)
        finally:
            __frame_ctx = self._context_stack.pop()
        return __frame_ctx._return

    def _state_Idle(self, __e, compartment):
        if __e._message == "load":
            self._s_Idle_hdl_user_load(__e, compartment)
            return

    def _state_Holding(self, __e, compartment):
        value = self.__compartment.state_args[0]
        if __e._message == "adjust":
            self._s_Holding_hdl_user_adjust(__e, compartment)
            return
        if __e._message == "peek":
            self._s_Holding_hdl_user_peek(__e, compartment)
            return

    def _s_Idle_hdl_user_load(self, __e, compartment):
        initial = __e._parameters[0]
        __compartment = self.__prepareEnter("Holding", [initial], [])
        self.__transition(__compartment)
        return

    def _s_Holding_hdl_user_adjust(self, __e, compartment):
        value = compartment.state_args[0]
        delta = __e._parameters[0]
        __compartment = self.__prepareEnter("Holding", [value + delta], [])
        self.__transition(__compartment)
        return

    def _s_Holding_hdl_user_peek(self, __e, compartment):
        value = compartment.state_args[0]
        self._context_stack[-1]._return = value
